# ZeroTutorial

./: .gitignore  README.md
client/Assets/Animators/: MainCharacter.controller
client/Assets/Editor/: PhysicsExporter.cs
client/Assets/Resources/Character/: MainCharacter.prefab  OtherCharacter.prefab
client/Assets/Scenes/: DemoScene.unity  LoginScene.unity
client/Assets/Scripts/: CharacterMovement.cs  Entity.cs  FootIK.cs  LoginUI.cs  PlayerController.cs  SimulateMovement.cs
client/Assets/Scripts/Combat/: AttrSet.cs  CombatComponent.cs  SkillComponent.cs
client/Assets/Scripts/Combat/Skill/: ISkill.cs  Skill_1.cs
client/Assets/Scripts/Network/: NetSerializer.cs  NetworkComponent.cs  NetworkManager.cs  NetworkTcpClient.cs  TSyncArray.cs
client/Assets/Scripts/Network/proto/: SpaceService.cs  space_service.cs
client/ProjectSettings/: InputManager.asset
proto/: compile.bat  space_service.proto
server/: CMakeLists.txt  conan_and_cmake.bat  conanfile.txt
server/src/: bit_stream.h  bit_utils.h  echo_service.h  game_server.cpp  globals.h  icomponent.h  math_utils.cpp  math_utils.h  monster.cpp  monster.h  movement_component.cpp  movement_component.h  player.cpp  player.h  property.h  service.h  space.cpp  space.h  space_service.cpp  space_service.h  sync_array.h
server/src/aoi/: aoi_factory.h  grid_aoi.cpp  grid_aoi.h
server/src/combat/: attr_set.cpp  attr_set.h  combat_component.cpp  combat_component.h
server/src/combat/skill/: iskill.h  skill_1.cpp  skill_1.h  skill_factory.h
server/src/navigation/: navmesh_loader.cpp  navmesh_loader.h
server/src/network/: tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
server/src/physics/: PhysicsData.h  UnityPhysicsLoader.cpp  UnityPhysicsLoader.h  physics_mgr.cpp  physics_mgr.h
server/src/proto/: space_service.pb.cc  space_service.pb.h
server/test_data/DemoScene/: scene.json
